<resources>
    <string name="app_name">YAFR</string>
    <string name="app_icon">App Icon</string>
    <string name="about">About</string>
    <string name="feed_details">Feed Details</string>
    <string name="lorem_ipsum_short">Lorem ipsum</string>
    <string name="worth_mentioning_text">Whatever developer finds worth mentioning</string>
    <string name="author_name">Borislav Prikić</string>
    <string name="author_email">email@email.com</string>
    <string name="source_name">Source Name</string>
    <string name="source_url">Source URL</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="save_new_rss_source">Save new RSS channel</string>
    <string name="edit_rss_source">Edit existing RSS channel</string>
    <string name="rss_channel_saved">Rss Channel saved</string>
    <string name="rss_channel_edited">Rss Channel edited</string>
    <string name="image_view_show_channel_details">Show Rss Channel details</string>
    <string name="row_selection">Row selection</string>

    <string name="published">Published</string>
    <string name="source">Source</string>

    <!-- toolbar -->
    <string name="menu_title_delete">Delete</string>
    <string name="share">Share</string>

</resources>
