<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="400dip">
    <TextView
        android:id="@+id/dialog_create_or_edit_source_title"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/lorem_ipsum_short"
        android:gravity="center"
        android:textColor="@color/white"
        android:scaleType="center"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/app_name" />
    <EditText
        android:id="@+id/dialog_create_or_edit_source_name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/source_name" />
    <EditText
        android:id="@+id/dialog_create_or_edit_source_url"
        android:inputType="textUri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/source_url"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/btnCancelSourceDialog"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="?android:buttonBarButtonStyle" />
        <Button
            android:id="@+id/btnSaveSourceDialog"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            style="?android:buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>